bug 1524359 - 49,600 instances of "NS_ENSURE_SUCCESS(rv, false) failed with result 0x80004005" emitted from docshell/shistory/nsSHistory.cpp during linux64 debug testing r=peterv

Replaced "NS_ENSURE_SUCCESS" with 'if' condition

Differential Revision: https://phabricator.services.mozilla.com/D25529